--- a/_posts/2013-11-06-About-Us.md
+++ b/_posts/2013-11-06-About-Us.md
@@ -2,10 +2,12 @@
 title: About Us
 class: home
 secondClass: pannel
-thirdClass: no-bg
+thirdClass: "no-bg"
 identification: content1
+published: true
 ---
-Founded in 1992, the Nantucket Education Trust is a non-profit community organization whose NETmission is three-fold: to generate private support for public education on Nantucket; to foster private and public partnerships that benefit the children of Nantucket Public Schools; and to honor excellence in teaching and learning.
+
+Founded in 1992, the Nantucket Education Trust is a non-profit community organization whose NETmission is three-fold: to generate private support for public education on Nantucket; to foster private and public partnerships that benefit the children of Nantucket Public Schools; and to honor excellence in teaching and learning..
 The Trust was established during a time when school systems throughout the country were experiencing severe financial constraints as a result of newly imposed budget caps.  Often such restricted budgets covered only the basic necessities and essentials.  Several Nantucket community members had learned about how other towns were forming tax-exempt, non profit organizations to generate private money for the public schools from individuals, foundations and businesses.  A steering committee, consisting of school staff, parents and community members was formed.  Their efforts resulted in the formation of the Trust and the subsequent development of strategies to connect the public schools with the private sector.
 The Trust, while connected to and supportive of the school system,  is autonomous, and has its own by-laws and Board of Directors.<br/><br/>
 BOARD OF DIRECTORS:<br/><br/>
@@ -15,6 +17,3 @@ Robin Harvey, [robinharvey1@mac.com](#)<br />
 Robert Liddle, [liddler@nps.k12.ma.us](#)<br />
 Pauline Proch, [pproch@eganmaritime.org](#)<br />
 Caitlin Waddington, [waddingtonc@nps.k12.ma.us](#)
-
-
-
