All set before media queries

--- a/_posts/2013-11-04-Programs.md
+++ b/_posts/2013-11-04-Programs.md
@@ -10,7 +10,7 @@ New program in the works:<br/><br/>
 The concept is to develop an exchange whereby our students in Honors and/or Advanced Placement English will spend 7-10 days in London working with the ASL staff reading a selection from the works of Shakespeare or Dickens.  In return, students from ASL will come to Nantucket at another time to work with our staff and community experts and organizations studying the works of Melville (or perhaps our own Nat Philbrick) and learn about the rich history of Nantucket.  In addition to the literary study,students will travel and experience what each locale has to offer.
 
 <div id="form-wrapper">
-    <img src="/images/logo.png" title="Nantucket" id="form-logo"/>
+    <img src="images/logo.png" title="Nantucket" id="form-logo"/>
     <h3>Nantucket Education Trust Project Proposal Form</h3>
     <p class="form-paragraphs">Please briefly outline your project proposal below.  Please attach any pertinent documents that will assist NET in determining a decision regarding your request.  Please scan and email this application and supporting documentation to NET board member, Caitlin Waddington, at  [waddingtonc@nps.k12.ma.us](mailto:waddingtonc@nps.k12.ma.us)  or call 508-228-7285 x1162 for further information.</p>
     <p class="form-paragraphs">Applications are reviewed by committee on a monthly basis.  We will be in touch with you should we have additional questions.  Thank you.</p>
