--- a/_posts/2013-11-04-Programs.md
+++ b/_posts/2013-11-04-Programs.md
@@ -8,7 +8,7 @@ published: true
 ---
 
 _**Current Programs:**_<br/><br/>
-######SUMMER-BOOST KINDERGARTEN READINESS PROGRAM######
+####SUMMER-BOOST KINDERGARTEN READINESS PROGRAM
 NET funded the transportation costs for Nantucket's youngest islanders. This decrease barriers to participation and ensured consistent attendance to this intergral pre-kindergarten experience. Summer Boost is designed for children with limited exposure to academic skills including: letter and number recognition, language, fine and gross motor skills and pro-social activities. 
 
 ######NANTUCKET SCALLOP RESEARCH INTERNSHIP PROJECT######
