--- a/_posts/2013-11-04-Programs.md
+++ b/_posts/2013-11-04-Programs.md
@@ -11,17 +11,17 @@ _**Current Programs:**_<br/><br/>
 ####SUMMER-BOOST KINDERGARTEN READINESS PROGRAM
 NET funded the transportation costs for Nantucket's youngest islanders. This decrease barriers to participation and ensured consistent attendance to this intergral pre-kindergarten experience. Summer Boost is designed for children with limited exposure to academic skills including: letter and number recognition, language, fine and gross motor skills and pro-social activities. 
 
-######NANTUCKET SCALLOP RESEARCH INTERNSHIP PROJECT######
+####NANTUCKET SCALLOP RESEARCH INTERNSHIP PROJECT
 Researcher, Peter Boyce, under the direction of Maria Mitchell Association mentored three student interns to gather and analyze data collected regarding scallop propogation. NET supported this project by funding one exemplary student intern.   
 
-######GUEST SPEAKER NAVY SEAL RYAN PETERS ######
+####GUEST SPEAKER NAVY SEAL RYAN PETERS 
 NET, in collaboration with Egan Maritime Institute & Nantucket Public Schools, invited all community members to hear Ryan Peters share his personal experience as a Navy Seal.  
 
-######HOLIDAY ON BROADWAY WITH LEAH HOCKING######
+####HOLIDAY ON BROADWAY WITH LEAH HOCKING
 NET was excited to assist in bringing leading Broadway Vocalist, Leah Hocking, to Nantucket for a Holiday on Broadway performance with the Nantucket High School Choir - a once in a lifetime opportunity for many of our high school students.  
 
 _**Proposed Programs:**_<br/><br/>
-######LITERARY EXCHANGE with AMERICAN SCHOOL OF LONDON######
+####LITERARY EXCHANGE with AMERICAN SCHOOL OF LONDON
 We plan to develop an exchange for Nantucket High School students in Honors and/or Advanced Placement English. They will spend 7-10 days in London working with the ASL staff reading a selection from the works of Shakespeare or Dickens.  In return, students from ASL will visit Nantucket at another time to work with NHS faculty, community experts and organizations to study Melville and other literary works while learning about the rich history of Nantucket.  In addition to the literary study, students will travel and experience what each locale has to offer.
 
 
