--- a/_posts/2013-11-04-Programs.md
+++ b/_posts/2013-11-04-Programs.md
@@ -9,10 +9,10 @@ published: true
 
 _**Current Programs:**_<br/><br/>
 ####SUMMER-BOOST KINDERGARTEN READINESS PROGRAM
-NET funded the transportation costs for Nantucket's youngest islanders. This decrease barriers to participation and ensured consistent attendance to this intergral pre-kindergarten experience. Summer Boost is designed for children with limited exposure to academic skills including: letter and number recognition, language, fine and gross motor skills and pro-social activities. 
+NET funded the transportation costs for Nantucket's youngest islanders. This gift decreased barriers to participation and ensured consistent attendance to this integral pre-kindergarten experience. Summer Boost is designed for children with limited exposure to academic skills including: letter and number recognition, language, fine and gross motor skills and pro-social activities. 
 
 ####NANTUCKET SCALLOP RESEARCH INTERNSHIP PROJECT
-Researcher, Peter Boyce, under the direction of Maria Mitchell Association mentored three student interns to gather and analyze data collected regarding scallop propogation. NET supported this project by funding one exemplary student intern.   
+Researcher, Peter Boyce, under the direction of Maria Mitchell Association mentored three student interns to gather and analyze data collected regarding scallop propagation. NET supported this project by funding one exemplary student intern.   
 
 ####GUEST SPEAKER NAVY SEAL RYAN PETERS 
 NET, in collaboration with Egan Maritime Institute & Nantucket Public Schools, invited all community members to hear Ryan Peters share his personal experience as a Navy Seal.  
