--- a/_posts/2013-11-05-Mission.md
+++ b/_posts/2013-11-05-Mission.md
@@ -11,5 +11,4 @@ Rooted in a community distinguished by its unique history and setting, Nantucket
     <li>to foster alliances among business, community and school interests, and to serve as a catalyst for public and private partnerships that benefit education;</li>
     <li>to promote the exchange of ideas among island schools and between our schools and those from other communities;</li>
     <li>to support programs that honor excellence in teaching and learning;</li>
- </ul>
-<p>Rather than duplicate the efforts of the island’s existing educational groups, including the public schools, Friends of the Nantucket Public Schools, the Community School, the island’s private schools, and numerous voluntary activities, Nantucket Education Trust will seek new ways to support existing initiatives as well as explore strategies for promoting lasting, system-wide improvements.  The Trust will tap new sources that can assist teachers and students, and implement more effective school programs.</p>
+ </ul><p>Rather than duplicate the efforts of the island’s existing educational groups, including the public schools, Friends of the Nantucket Public Schools, the Community School, the island’s private schools, and numerous voluntary activities, Nantucket Education Trust will seek new ways to support existing initiatives as well as explore strategies for promoting lasting, system-wide improvements.  The Trust will tap new sources that can assist teachers and students, and implement more effective school programs.</p>
