--- a/_posts/2013-11-04-Programs.md
+++ b/_posts/2013-11-04-Programs.md
@@ -7,7 +7,7 @@ identification: content3
 published: true
 ---
 
-_**Current Programs:**_<br/><br/>
+###_Current Programs:_###
 ####SUMMER-BOOST KINDERGARTEN READINESS PROGRAM
 NET funded the transportation costs for Nantucket's youngest islanders. This gift decreased barriers to participation and ensured consistent attendance to this integral pre-kindergarten experience. Summer Boost is designed for children with limited exposure to academic skills including: letter and number recognition, language, fine and gross motor skills and pro-social activities. 
 
@@ -20,7 +20,7 @@ NET, in collaboration with Egan Maritime Institute & Nantucket Public Schools, i
 ####HOLIDAY ON BROADWAY WITH LEAH HOCKING
 NET was excited to assist in bringing leading Broadway Vocalist, Leah Hocking, to Nantucket for a Holiday on Broadway performance with the Nantucket High School Choir - a once in a lifetime opportunity for many of our high school students.  
 
-_**Proposed Programs:**_<br/><br/>
+###_Proposed Programs:_###
 ####LITERARY EXCHANGE with AMERICAN SCHOOL OF LONDON
 We plan to develop an exchange for Nantucket High School students in Honors and/or Advanced Placement English. They will spend 7-10 days in London working with the ASL staff reading a selection from the works of Shakespeare or Dickens.  In return, students from ASL will visit Nantucket at another time to work with NHS faculty, community experts and organizations to study Melville and other literary works while learning about the rich history of Nantucket.  In addition to the literary study, students will travel and experience what each locale has to offer.
 
