Unify most of the content

--- a/_posts/2013-11-04-Programs.md
+++ b/_posts/2013-11-04-Programs.md
@@ -25,7 +25,7 @@ NET was excited to assist in bringing leading Broadway Vocalist, Leah Hocking, t
 We plan to develop an exchange for Nantucket High School students in Honors and/or Advanced Placement English. They will spend 7-10 days in London working with the ASL staff reading a selection from the works of Shakespeare or Dickens.  In return, students from ASL will visit Nantucket at another time to work with NHS faculty, community experts and organizations to study Melville and other literary works while learning about the rich history of Nantucket.  In addition to the literary study, students will travel and experience what each locale has to offer.
 
 
-######INTERESTED IN COLLABORATING WITH NET? 
+INTERESTED IN COLLABORATING WITH NET? 
  
 The NET Board conducts monthly reviews on Project Proposals for mini grants up to $1,500. Grants will be awarded at higher levels as NET’s funding stream is increased through community support and private donations. 
  
