--- a/_posts/2013-11-01-Strategy.md
+++ b/_posts/2013-11-01-Strategy.md
@@ -2,10 +2,10 @@
 title: Strategy
 class: strategy
 secondClass: pannel
-thirdClass: no-bg
+thirdClass: "no-bg"
 identification: content6
+published: true
 ---
-The Trust is committed to establishing a permanent endowment fund to be named in honor of Nina Chandler Murray.
-Such an endowment will enable the Trust to continue funding supplemental initiatives needed to provide the students
-of the Nantucket Public Schools with the quality education they deserve.  The goal is to raise $800,000 for the Nina
-Chandler Murray Endowment.
+
+The Trust is committed to establishing a permanent endowment fund.  
+Such an endowment will enable the Trust to continue funding initiatives that complement the quality education offered to the students of the Nantucket Public Schools. 
