--- a/_posts/2013-11-01-Strategy.md
+++ b/_posts/2013-11-01-Strategy.md
@@ -1,5 +1,5 @@
 ---
-title: Strategy
+title: Commitment
 class: strategy
 secondClass: pannel
 thirdClass: "no-bg"
@@ -7,5 +7,4 @@ identification: content6
 published: true
 ---
 
-The Trust is committed to establishing a permanent endowment fund.  
-Such an endowment will enable the Trust to continue funding initiatives that complement the quality education offered to the students of the Nantucket Public Schools. 
+The Trust is committed to funding initiatives that complement the quality education offered to the students of the Nantucket Public Schools. 
