--- a/_posts/2013-11-06-About-Us.md
+++ b/_posts/2013-11-06-About-Us.md
@@ -1,1 +1,19 @@
+---
+title: In Sympathy
+class: home
+secondClass: pannel
+thirdClass: "no-bg"
+identification: content1
+published: true
+---
 
+<img src="../images/Robin-Harvey.jpg" alt="Robin Harvey Image" title="Robin Harvey" id="robinHarvey">
+
+_It's with a heavy heart that we acknowledge the passing of fellow board member Robin Harvey._
+
+_Robin's immense vitality, dedication, warmth, strength and friendship will be infinitely missed. She leaves a most respected and revered imprint on us all and we thank her._
+
+_We would like to extend our most sincere condolences to the Harvey family as we join our community during this time of mourning._
+
+&nbsp;
+&nbsp;
